# hurdat2_etl_demo

./: .clinerules-architect  .clinerules-ask  .clinerules-code  .gitignore  .pre-commit-config.yaml  claude_thoughts.md  closeout_plan_dsr1.md  etl_script.py  fixes.md  in_progress_review_dsr1.md  load_refactor.md  load_refactor_post_action_dsr1.md  location_debug_plan_dsr1.md  pyproject.toml  refactor_load_module_plan.md  refactor_plan_dsr1.md  tqdm_int_plan.md
memory-bank/: ETL_code_review.md  ETL_code_review2.md  progress.md  projectBrief.md  systemPatterns.md
ref/: schema_def.md
scripts/: run_etl.py
src/hurdat2_etl/: core.py  exceptions.py  main.py  models.py
src/hurdat2_etl/config/: settings.py
src/hurdat2_etl/extract/: extract.py  parser.py  types.py
src/hurdat2_etl/load/: __init__.py  connection.py  load.py  operations.py  reporting.py  schema.py
src/hurdat2_etl/transform/: transform.py
tests/: conftest.py  test_pipeline.py
tests/data/hurdat2/: test_data.txt
tests/data/hurdat2/errors/: empty_line.txt  invalid_format.txt  invalid_header.txt
tests/extract/: test_extraction.py  test_parser.py.old
tests/load/: __init__.py  test_database.py  test_operations.py  update_summary.md
